cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_09742_393750230.yaml
Resources:
  yelbvpc302B8EB3:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/Resource
  yelbvpcPublicSubnet1SubnetB6572984:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: yelbvpc302B8EB3
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet1/Subnet
  yelbvpcPublicSubnet1RouteTableDC2CA243:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: yelbvpc302B8EB3
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet1/RouteTable
  yelbvpcPublicSubnet1RouteTableAssociation6AA99EDF:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: yelbvpcPublicSubnet1RouteTableDC2CA243
      SubnetId:
        Ref: yelbvpcPublicSubnet1SubnetB6572984
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet1/RouteTableAssociation
  yelbvpcPublicSubnet1DefaultRouteE11CF9DD:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: yelbvpcPublicSubnet1RouteTableDC2CA243
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: yelbvpcIGWCB0A9E64
    DependsOn:
      - yelbvpcVPCGW5F3B132D
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet1/DefaultRoute
  yelbvpcPublicSubnet1EIP39BA4723:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet1/EIP
  yelbvpcPublicSubnet1NATGateway5587B757:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - yelbvpcPublicSubnet1EIP39BA4723
          - AllocationId
      SubnetId:
        Ref: yelbvpcPublicSubnet1SubnetB6572984
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet1/NATGateway
  yelbvpcPublicSubnet2SubnetF46EA311:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: yelbvpc302B8EB3
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet2/Subnet
  yelbvpcPublicSubnet2RouteTable96A30AF1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: yelbvpc302B8EB3
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet2/RouteTable
  yelbvpcPublicSubnet2RouteTableAssociationEE7C8334:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: yelbvpcPublicSubnet2RouteTable96A30AF1
      SubnetId:
        Ref: yelbvpcPublicSubnet2SubnetF46EA311
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet2/RouteTableAssociation
  yelbvpcPublicSubnet2DefaultRoute9C4CEBA7:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: yelbvpcPublicSubnet2RouteTable96A30AF1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: yelbvpcIGWCB0A9E64
    DependsOn:
      - yelbvpcVPCGW5F3B132D
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet2/DefaultRoute
  yelbvpcPublicSubnet2EIP12D8248C:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet2/EIP
  yelbvpcPublicSubnet2NATGateway2CD7C7BC:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - yelbvpcPublicSubnet2EIP12D8248C
          - AllocationId
      SubnetId:
        Ref: yelbvpcPublicSubnet2SubnetF46EA311
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PublicSubnet2/NATGateway
  yelbvpcPrivateSubnet1Subnet7B0751D4:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: yelbvpc302B8EB3
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PrivateSubnet1/Subnet
  yelbvpcPrivateSubnet1RouteTable9B331AF8:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: yelbvpc302B8EB3
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PrivateSubnet1/RouteTable
  yelbvpcPrivateSubnet1RouteTableAssociation4943B116:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: yelbvpcPrivateSubnet1RouteTable9B331AF8
      SubnetId:
        Ref: yelbvpcPrivateSubnet1Subnet7B0751D4
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PrivateSubnet1/RouteTableAssociation
  yelbvpcPrivateSubnet1DefaultRoute23DAB8FF:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: yelbvpcPrivateSubnet1RouteTable9B331AF8
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: yelbvpcPublicSubnet1NATGateway5587B757
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PrivateSubnet1/DefaultRoute
  yelbvpcPrivateSubnet2Subnet5AEAD2DE:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: yelbvpc302B8EB3
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PrivateSubnet2/Subnet
  yelbvpcPrivateSubnet2RouteTableD077090F:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: yelbvpc302B8EB3
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PrivateSubnet2/RouteTable
  yelbvpcPrivateSubnet2RouteTableAssociation2390EA19:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: yelbvpcPrivateSubnet2RouteTableD077090F
      SubnetId:
        Ref: yelbvpcPrivateSubnet2Subnet5AEAD2DE
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PrivateSubnet2/RouteTableAssociation
  yelbvpcPrivateSubnet2DefaultRoute6108BC00:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: yelbvpcPrivateSubnet2RouteTableD077090F
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: yelbvpcPublicSubnet2NATGateway2CD7C7BC
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/PrivateSubnet2/DefaultRoute
  yelbvpcIGWCB0A9E64:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: YelbEcsStack/yelb-vpc
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/IGW
  yelbvpcVPCGW5F3B132D:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: yelbvpc302B8EB3
      InternetGatewayId:
        Ref: yelbvpcIGWCB0A9E64
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-vpc/VPCGW
  yelbclusterA19BEB90:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: yelb-cluster
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-cluster/Resource
  Namespace9B63B8C8:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: yelb.local
      Vpc:
        Ref: yelbvpc302B8EB3
    Metadata:
      aws:cdk:path: YelbEcsStack/Namespace/Resource
  yelbuitaskdefTaskRoleB8504C5B:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-taskdef/TaskRole/Resource
  yelbuitaskdefAEC06D28:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: SEARCH_DOMAIN
              Value: yelb.local
          Essential: true
          Image: mreferre/yelb-ui:0.7
          Name: yelb-ui-container
          PortMappings:
            - ContainerPort: 80
              Protocol: tcp
      Cpu: "512"
      Family: YelbEcsStackyelbuitaskdef8DFAF8DF
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - yelbuitaskdefTaskRoleB8504C5B
          - Arn
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-taskdef/Resource
  yelbuiserviceLB6BCF99A2:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - yelbuiserviceLBSecurityGroup139CC06A
            - GroupId
      Subnets:
        - Ref: yelbvpcPublicSubnet1SubnetB6572984
        - Ref: yelbvpcPublicSubnet2SubnetF46EA311
      Type: application
    DependsOn:
      - yelbvpcPublicSubnet1DefaultRouteE11CF9DD
      - yelbvpcPublicSubnet2DefaultRoute9C4CEBA7
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/LB/Resource
  yelbuiserviceLBSecurityGroup139CC06A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB YelbEcsStackyelbuiserviceLB48E2FB3B
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: yelbvpc302B8EB3
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/LB/SecurityGroup/Resource
  yelbuiserviceLBSecurityGrouptoYelbEcsStackyelbuiserviceServiceSecurityGroup8A7D25EA80647C3153:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Fn::GetAtt:
          - yelbuiserviceLBSecurityGroup139CC06A
          - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Fn::GetAtt:
          - yelbuiserviceServiceSecurityGroupD962233A
          - GroupId
      FromPort: 80
      ToPort: 80
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/LB/SecurityGroup/to YelbEcsStackyelbuiserviceServiceSecurityGroup8A7D25EA:80
  yelbuiserviceLBPublicListener8A6F0594:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: yelbuiserviceLBPublicListenerECSGroupA97BDEC6
          Type: forward
      LoadBalancerArn:
        Ref: yelbuiserviceLB6BCF99A2
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/LB/PublicListener/Resource
  yelbuiserviceLBPublicListenerECSGroupA97BDEC6:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Ref: yelbvpc302B8EB3
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/LB/PublicListener/ECSGroup/Resource
  yelbuiserviceServiceCB6AC9D3:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: yelbclusterA19BEB90
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 3
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: yelb-ui-container
          ContainerPort: 80
          TargetGroupArn:
            Ref: yelbuiserviceLBPublicListenerECSGroupA97BDEC6
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - yelbuiserviceServiceSecurityGroupD962233A
                - GroupId
          Subnets:
            - Ref: yelbvpcPrivateSubnet1Subnet7B0751D4
            - Ref: yelbvpcPrivateSubnet2Subnet5AEAD2DE
      ServiceName: yelb-ui
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - yelbuiserviceServiceCloudmapService013F5F06
              - Arn
      TaskDefinition:
        Ref: yelbuitaskdefAEC06D28
    DependsOn:
      - yelbuiserviceLBPublicListenerECSGroupA97BDEC6
      - yelbuiserviceLBPublicListener8A6F0594
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/Service/Service
  yelbuiserviceServiceCloudmapService013F5F06:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      DnsConfig:
        DnsRecords:
          - TTL: 60
            Type: A
        NamespaceId:
          Fn::GetAtt:
            - Namespace9B63B8C8
            - Id
        RoutingPolicy: MULTIVALUE
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: yelb-ui
      NamespaceId:
        Fn::GetAtt:
          - Namespace9B63B8C8
          - Id
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/Service/CloudmapService/Resource
  yelbuiserviceServiceSecurityGroupD962233A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: YelbEcsStack/yelb-ui-service/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: yelbvpc302B8EB3
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/Service/SecurityGroup/Resource
  yelbuiserviceServiceSecurityGroupfromYelbEcsStackyelbuiserviceLBSecurityGroupD862BDFA80B9E712C7:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 80
      GroupId:
        Fn::GetAtt:
          - yelbuiserviceServiceSecurityGroupD962233A
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - yelbuiserviceLBSecurityGroup139CC06A
          - GroupId
      ToPort: 80
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-ui-service/Service/SecurityGroup/from YelbEcsStackyelbuiserviceLBSecurityGroupD862BDFA:80
  yelbappservertaskdefTaskRole813B8CC8:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-appserver-taskdef/TaskRole/Resource
  yelbappservertaskdefFB17177D:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: SEARCH_DOMAIN
              Value: yelb.local
          Essential: true
          Image: mreferre/yelb-appserver:0.5
          Name: yelb-appserver-container
      Cpu: "512"
      Family: YelbEcsStackyelbappservertaskdefADD41178
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - yelbappservertaskdefTaskRole813B8CC8
          - Arn
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-appserver-taskdef/Resource
  yelbappserverserviceService3C5EEB79:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: yelbclusterA19BEB90
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 2
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - yelbappserverserviceSecurityGroupED9C14F4
                - GroupId
          Subnets:
            - Ref: yelbvpcPrivateSubnet1Subnet7B0751D4
            - Ref: yelbvpcPrivateSubnet2Subnet5AEAD2DE
      ServiceName: yelb-appserver
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - yelbappserverserviceCloudmapService4F52B473
              - Arn
      TaskDefinition:
        Ref: yelbappservertaskdefFB17177D
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-appserver-service/Service
  yelbappserverserviceCloudmapService4F52B473:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      DnsConfig:
        DnsRecords:
          - TTL: 60
            Type: A
        NamespaceId:
          Fn::GetAtt:
            - Namespace9B63B8C8
            - Id
        RoutingPolicy: MULTIVALUE
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: yelb-appserver
      NamespaceId:
        Fn::GetAtt:
          - Namespace9B63B8C8
          - Id
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-appserver-service/CloudmapService/Resource
  yelbappserverserviceSecurityGroupED9C14F4:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: YelbEcsStack/yelb-appserver-service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: yelbvpc302B8EB3
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-appserver-service/SecurityGroup/Resource
  yelbappserverserviceSecurityGroupfromYelbEcsStackyelbuiserviceServiceSecurityGroup8A7D25EA456722DF7738:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from YelbEcsStackyelbuiserviceServiceSecurityGroup8A7D25EA:4567
      FromPort: 4567
      GroupId:
        Fn::GetAtt:
          - yelbappserverserviceSecurityGroupED9C14F4
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - yelbuiserviceServiceSecurityGroupD962233A
          - GroupId
      ToPort: 4567
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-appserver-service/SecurityGroup/from YelbEcsStackyelbuiserviceServiceSecurityGroup8A7D25EA:4567
  yelbdbtaskdefTaskRole784AE2E0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-db-taskdef/TaskRole/Resource
  yelbdbtaskdef2DB78E6F:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: mreferre/yelb-db:0.5
          Name: yelb-db-container
      Cpu: "512"
      Family: YelbEcsStackyelbdbtaskdef1A2AB04E
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - yelbdbtaskdefTaskRole784AE2E0
          - Arn
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-db-taskdef/Resource
  yelbdbserviceServiceD94DDA1B:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: yelbclusterA19BEB90
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - yelbdbserviceSecurityGroup98214714
                - GroupId
          Subnets:
            - Ref: yelbvpcPrivateSubnet1Subnet7B0751D4
            - Ref: yelbvpcPrivateSubnet2Subnet5AEAD2DE
      ServiceName: yelb-db
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - yelbdbserviceCloudmapService3B860FCB
              - Arn
      TaskDefinition:
        Ref: yelbdbtaskdef2DB78E6F
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-db-service/Service
  yelbdbserviceCloudmapService3B860FCB:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      DnsConfig:
        DnsRecords:
          - TTL: 60
            Type: A
        NamespaceId:
          Fn::GetAtt:
            - Namespace9B63B8C8
            - Id
        RoutingPolicy: MULTIVALUE
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: yelb-db
      NamespaceId:
        Fn::GetAtt:
          - Namespace9B63B8C8
          - Id
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-db-service/CloudmapService/Resource
  yelbdbserviceSecurityGroup98214714:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: YelbEcsStack/yelb-db-service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: yelbvpc302B8EB3
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-db-service/SecurityGroup/Resource
  yelbdbserviceSecurityGroupfromYelbEcsStackyelbappserverserviceSecurityGroupB05A05A354324363C357:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from YelbEcsStackyelbappserverserviceSecurityGroupB05A05A3:5432
      FromPort: 5432
      GroupId:
        Fn::GetAtt:
          - yelbdbserviceSecurityGroup98214714
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - yelbappserverserviceSecurityGroupED9C14F4
          - GroupId
      ToPort: 5432
    Metadata:
      aws:cdk:path: YelbEcsStack/yelb-db-service/SecurityGroup/from YelbEcsStackyelbappserverserviceSecurityGroupB05A05A3:5432
  redisservertaskdefTaskRoleA526CDBA:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: YelbEcsStack/redis-server-taskdef/TaskRole/Resource
  redisservertaskdef12A494B3:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: redis:4.0.2
          Name: redis-server
      Cpu: "512"
      Family: YelbEcsStackredisservertaskdef5B10E567
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - redisservertaskdefTaskRoleA526CDBA
          - Arn
    Metadata:
      aws:cdk:path: YelbEcsStack/redis-server-taskdef/Resource
  redisserverserviceServiceC9DF0AAB:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: yelbclusterA19BEB90
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - redisserverserviceSecurityGroup2372F730
                - GroupId
          Subnets:
            - Ref: yelbvpcPrivateSubnet1Subnet7B0751D4
            - Ref: yelbvpcPrivateSubnet2Subnet5AEAD2DE
      ServiceName: redis-server
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - redisserverserviceCloudmapService6E4BF7A2
              - Arn
      TaskDefinition:
        Ref: redisservertaskdef12A494B3
    Metadata:
      aws:cdk:path: YelbEcsStack/redis-server-service/Service
  redisserverserviceCloudmapService6E4BF7A2:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      DnsConfig:
        DnsRecords:
          - TTL: 60
            Type: A
        NamespaceId:
          Fn::GetAtt:
            - Namespace9B63B8C8
            - Id
        RoutingPolicy: MULTIVALUE
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: redis-server
      NamespaceId:
        Fn::GetAtt:
          - Namespace9B63B8C8
          - Id
    Metadata:
      aws:cdk:path: YelbEcsStack/redis-server-service/CloudmapService/Resource
  redisserverserviceSecurityGroup2372F730:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: YelbEcsStack/redis-server-service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: yelbvpc302B8EB3
    Metadata:
      aws:cdk:path: YelbEcsStack/redis-server-service/SecurityGroup/Resource
  redisserverserviceSecurityGroupfromYelbEcsStackyelbappserverserviceSecurityGroupB05A05A36379F88BCAAF:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from YelbEcsStackyelbappserverserviceSecurityGroupB05A05A3:6379
      FromPort: 6379
      GroupId:
        Fn::GetAtt:
          - redisserverserviceSecurityGroup2372F730
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - yelbappserverserviceSecurityGroupED9C14F4
          - GroupId
      ToPort: 6379
    Metadata:
      aws:cdk:path: YelbEcsStack/redis-server-service/SecurityGroup/from YelbEcsStackyelbappserverserviceSecurityGroupB05A05A3:6379
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.42.0,@aws-cdk/aws-applicationautoscaling=1.42.0,@aws-cdk/aws-autoscaling=1.42.0,@aws-cdk/aws-autoscaling-common=1.42.0,@aws-cdk/aws-autoscaling-hooktargets=1.42.0,@aws-cdk/aws-certificatemanager=1.42.0,@aws-cdk/aws-cloudwatch=1.42.0,@aws-cdk/aws-ec2=1.42.0,@aws-cdk/aws-ecr=1.42.0,@aws-cdk/aws-ecr-assets=1.42.0,@aws-cdk/aws-ecs=1.42.0,@aws-cdk/aws-ecs-patterns=1.42.0,@aws-cdk/aws-elasticloadbalancingv2=1.42.0,@aws-cdk/aws-events=1.42.0,@aws-cdk/aws [...]
    Condition: CDKMetadataAvailable
Outputs:
  yelbuiserviceLoadBalancerDNS98CB6EE2:
    Value:
      Fn::GetAtt:
        - yelbuiserviceLB6BCF99A2
        - DNSName
  yelbuiserviceServiceURL5EAE18F0:
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - yelbuiserviceLB6BCF99A2
              - DNSName
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
